cilium-policies/flask-app-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "flask-app-policy"
spec:
  endpointSelector:
    matchLabels:
      app: flask-app
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: flask-app  # Apache proxy est dans le même pod (sidecar)
    toPorts:
    - ports:
      - port: "5000"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels: {}
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
